<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/RulesBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_alignParentTop="true"
        android:background="@color/Board"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtWiresLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/Black"
            android:text="@string/Wires_Left"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:fontFamily="monospace" />

        <TextView
            android:id="@+id/txtActionTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/Black"
            android:text="@string/Score"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:fontFamily="monospace" />

        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/Black"
            android:text="@string/Timer"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            app:fontFamily="monospace" />
    </RelativeLayout>

    <com.example.bomb_defuser.views.grid.Grid
        android:id="@+id/gameGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlTop"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@color/RulesBackground"
        android:visibility="visible">

    </com.example.bomb_defuser.views.grid.Grid>
</RelativeLayout>